[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k8s-chain-state"
description = ''
readme = "README.md"
requires-python = ">=3.7,<=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Lancelot de Ferrière", email = "wraitii@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/k8s-chain-state#readme"
Issues = "https://github.com/unknown/k8s-chain-state/issues"
Source = "https://github.com/unknown/k8s-chain-state"

[tool.hatch.version]
path = "k8s_chain_state/__about__.py"

[tool.hatch.envs.default]
python="3.9"
dependencies = [
  "pytest",
  "pytest-cov",
  "kubernetes",
  "pydantic",
  "kopf",
  "starknet-py",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=k8s_chain_state --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "k8s_chain_state/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
