[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k8s-chain-state"
description = ''
readme = "README.md"
requires-python = ">=3.7,<=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Lancelot de Ferrière", email = "wraitii@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "kubernetes",
  "pydantic",
  "starknet-py",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/briqNFT/k8s-chain-state#readme"
Issues = "https://github.com/briqNFT/k8s-chain-state/issues"
Source = "https://github.com/briqNFT/k8s-chain-state"

[project.scripts]
k8s-chain-state = "k8s_chain_state.cli"

[tool.hatch.version]
path = "k8s_chain_state/__about__.py"

[tool.hatch.envs.default]
python="3.9"
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
run = "python k8s_chain_state/cli.py {args}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=k8s_chain_state --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "k8s_chain_state/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
